kubernetes-manifests/networking/carts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: carts-service.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carts
                port:
                  number: 9100
