kubernetes-manifests/networking/emails-ingress-minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emails-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
    - host: microservice.io
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emails-service
                port:
                  number: 6000
