kubernetes-manifests/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-ingress
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /carts
            pathType: Prefix
            backend:
              service:
                name: carts
                port:
                  number: 9100
    - host: "localhost"
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 3000
    - host: "localhost"
      http:
        paths:
          - path: /emails(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: emails
                port:
                  number: 6000
#    - host: localhost
#      http:
#        paths:
#          - path: /payments
#            pathType: Prefix
#            backend:
#              service:
#                name: paymentservice
#                port:
#                  number: 3002
